# ubb-cs

computational logic/operations_conversions/: functions.py  ui.py
fp/a1/: p3.py
fp/a10/domain/: plane.py
fp/a10/services/: services.py
fp/a10/ui/: GUI.py
fp/a2/: main.py
fp/a4/: a4.py
fp/a6/: start.py
fp/a8/domain/: movie.py  rental.py
fp/a8/services/: services.py  undo_redo_service.py
fp/a8/start/: client.pickle  magic_numbers.py  movie.pickle  rental.pickle  settings.properties
fp/a8/tests/: a9_tests.py
fp/a8/ui/: ui.py
fp/t2/: domain.py  repository.py  ui.py
linear algebra/linear algebra/project2/: main.cpp
linear algebra/linear algebra/project3/: main.py
linear algebra/project1/tests/: 3_out.txt  5_out.txt
linear algebra/project2/tests/: input1.out
linear algebra/project3/tests/: 3.txt
linear algebra/project4/tests/: 4_out.txt  5_out.txt
linear algebra/project5/tests/: output1.txt  output5.txt
mathematical analysis/hw12/: hw12.ipynb
mathematical analysis/hw4/: hw4.ipynb
mathematical analysis/hw8/: hw8.ipynb
semester1/fp/a1/: p1.py
semester1/fp/a4/: euler.py
semester1/fp/exam/: service.py  test.py  ui.py
semester1/fp/t2/: text.txt
semester1/fundamentals-of-programming/a1/: p2.py
semester1/fundamentals-of-programming/a3/: main.py
semester1/fundamentals-of-programming/a5/: program.py
semester1/fundamentals-of-programming/a6/: functions.py  ui.py
semester1/fundamentals-of-programming/exam/: repository.py
semester1/fundamentals-of-programming/t1/: program.py
semester1/fundamentals-of-programming/t2/: services.py
semester1/linear algebra/project1/: main.py
semester1/linear algebra/project4/: main.py
semester2/data-structures-and-algorithms/sorted-bag-bst/: CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
semester2/data-structures-and-algorithms/sorted-multimap-hashtable/: CMakeLists.txt  ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.h
semester2/dsa/map_sll-main/: Map.cpp  (+1 more)
semester2/object-oriented-programming/a4-7/src/: CMakeLists.txt  exception.h
semester2/object-oriented-programming/a4-7/src/controller/: controller.cpp
semester2/object-oriented-programming/a4-7/src/domain/: movie.cpp
semester2/object-oriented-programming/a4-7/src/repository/: HTMLRepository.h
semester2/object-oriented-programming/a8-9/: CMakeLists.txt
semester2/object-oriented-programming/a8-9/src/: movies.csv  start.cpp
semester2/object-oriented-programming/a8-9/src/GUI/: adminGUI.h  gui.cpp  userGUI.cpp  userGUI.h
semester2/object-oriented-programming/a8-9/src/UI/: userInterface.h
semester2/object-oriented-programming/a8-9/src/domain/: movie.cpp  movie.h
semester2/object-oriented-programming/a8-9/src/input_output/: movies.html
semester2/object-oriented-programming/a8-9/src/repository/: CSVRepository.h  HTMLRepository.h  repository.cpp  repository.h
semester2/object-oriented-programming/practical_exam/: CMakeLists.txt  GUI.h  companywindow.cpp  companywindow.h  companywindow.ui  couriers.txt  courierwindow.cpp  courierwindow.h  courierwindow.ui  domain.h  main.cpp  mapwindow.cpp  mapwindow.h  mapwindow.ui  observer.h  packages.txt  repository.h  service.h
semester3/computer-networks/: NAT.pkt  topology.pkt
semester3/databases/: lab2.sql  lab5.sql  lab6-2.sql  lab6.sql
semester3/probability-and-statistics/: steel_glass.m
(+1360 files in other folders)
